I literally don't know
I think this is because vscode needs now JDK 11 to run the program. I hope this still works for 1.8 JRE environment but legitly, I don't know.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,10 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Debug (Launch)-MainLauncher<Completed-Games Registers>",
+            "name": "Debug (Launch)-MainLauncher<completed-games-registers>",
             "request": "launch",
             "mainClass": "MainLauncher",
-            "projectName": "Completed-Games Registers"
+            "projectName": "completed-games-registers"
         }
     ]
 }
