Updated "JAVA" variable in Software class
Now, it's displaying "Java 1.8" as "The required Java version".

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,10 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Debug (Launch)-MainLauncher<completed-games-registers>",
+            "name": "Debug (Launch) Completed-Games Registers",
             "request": "launch",
             "mainClass": "MainLauncher",
-            "projectName": "completed-games-registers"
+            "projectName": "Completed-Games Registers"
         }
     ]
 }
