Now the software can run on Linux. There's still missing a little test on Windows...

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@ jar/
 bin/
 build/
 trash/
-run/run/
+run/linux/run/
+run/linux/jar/
+run/windows/run/
+run/windows/jar/
 .settings/
 .vscode/
 .project
